revert changes+experiment

--- a/_config.yml
+++ b/_config.yml
@@ -8,15 +8,15 @@ google_analytics: # Set tracking, remove from /javascripts/basic.js if unwanted.
 share:            false # Turn on twitter and facebook share buttons
 
 links:
-  - name:         Posts
-    url:          /blog
+  - name:         Blog posts
+    url:          /
     external:     false
   - name:         About me
-    url:          /
+    url:          /about
     external:     false
 # ------------ CONFIGURABLE END ------------
 
-permalink:        /posts/:title
+permalink:        /posts/:year/:month/:title
 defaults:
   - values:
       layout: "default"
