--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # ----------- CONFIGURABLE START -----------
-title:            "Romtam K."
+title:            "romtam"
 description:      "A website."
 url:              https://romtam.github.io # Site url, without a slash at the end.
 signoff:          "Romtam" # Your name
